<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">495734800984011</string>
    <string name="fb_login_protocol_scheme">fb495734800984011</string>
    <string name="app_name">Church\'s Texas Chicken</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="how_to_eard_rewards">How to place an order</string>
    <string name="how_to_eard_rewards_txt">Select a location to start order.</string>
    <string name="how_to_redeem_rewards">Add items to your order</string>
    <string name="how_to_redeem_rewards_txt">Select your favorite meal.
    </string>
    <string name="how_to_redeem_rewards_txt2">Swipe the Redeem Now button and then\nprovide your phone to apply the\nreward to your check
    </string>
    <string name="how_to_pay_with_phone">Complete your order</string>
    <string name="how_to_pay_with_phone_txt">When checking out, you will be able to Save Your Order as a Favorite. Add a Credit Card and Select the Order Method. You can also enter an Offer Code and Redeem a Promotion.</string>
    <string name="handle_blank_pop_up">We\'re sorry! Unfortunately we are not able to process your request. Please try
        again in a bit. If the problem persists please reach out to our technical team via Contact Us.
    </string>
    <string name="error_network_connection">Please check your internet connection!
    </string>
    <string name="queued_rewards_text">ACTIVATED REWARDS\nTap a reward to redeem in store.
    </string>
    <string name="turn_on_locations_text">Please turn on Location Services(in Settings or in Settings>Privacy) to allow
        Church\'s Kitchen to reward you
    </string>
    <string name="rewards_text">REWARD WALLET\nTap a highlighted reward to activate.</string>
    <string name="error_no_locations">No locations found</string>
    <string name="got_it">Got it</string>
    <string name="get_started">Let\'s get started</string>
    <string name="login">Log in</string>
    <string name="logout"><u>Log out</u></string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="signup">Sign up</string>
    <string name="update">Update</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="reset_password">Reset password</string>
    <string name="redeem_now">Redeem now</string>
    <string name="pay_earn">Mobile Pay / Earn Points</string>
    <string name="learn_more">Learn more</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="txt_promo_code_1">Have a promo code?</string>
    <string name="txt_promo_code_2">Enter your code here.</string>
    <string name="txt_promo_code_3">Case sensitive, no spaces please</string>
    <string name="txt_promo_code_4">Code not working?</string>
    <string name="txt_contact_us"><u>CONTACT US</u></string>
    <string name="txt_refer_friend_1">Refer a friend</string>
    <string name="txt_refer_friend_2">with your unique code.</string>
    <string name="txt_refer_friend_3">Share Your Invite Code</string>
    <string name="copy">Copy</string>
    <string name="code_copied">CODE COPIED TO CLIPBOARD</string>
    <string name="save_for_later">Save for later</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password
        <small>(Min. 7 Characters)</small>
    </string>
    <string name="hint_first_name">First Name (Min. 2 Characters)</string>
    <string name="hint_last_name">Last Name (Min. 2 Characters)</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_mobile_phone_number">Mobile Phone Number</string>
    <string name="hint_zip">Zip Code</string>
    <string name="hint_gift_card">Gift Card Number</string>
    <string name="hint_cvv">CVV</string>
    <string name="hint_favorite_location">Favorite Location</string>
    <string name="hint_sec_question">Security Question</string>
    <string name="hint_sec_answer">Security Answer</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_birthday_date">MM.DD.YYYY</string>
    <string name="hint_referral">Referral Code (optional)</string>
    <string name="hint_location_search">City, State or Zipcode</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_new_password">New Password
        <small>(Min. 7 Characters)</small>
    </string>
    <string name="hint_promo_code">Enter Promo Code</string>
    <string name="hint_comments">Comments</string>
    <string name="hint_discount_code">Enter Offer Code</string>
    <string name="hint_fav_name">My Favorite Order</string>
    <string name="title_transfer_card">TRANSFER CARD</string>
    <string name="title_promo_code">PROMO CODE</string>
    <string name="title_sign_up">SIGN UP</string>
    <string name="title_log_in">LOG IN</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="title_update_password">UPDATE PASSWORD</string>
    <string name="title_locations">LOCATIONS</string>
    <string name="title_account">ACCOUNT</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_more">MORE</string>
    <string name="title_support">SUPPORT</string>
    <string name="title_connect_social">CONNECT WITH US ON SOCIAL</string>
    <string name="title_personal_settings">PERSONAL</string>
    <string name="title_rewards">REWARDS</string>
    <string name="title_promotions">PROMOTIONS</string>
    <string name="title_my_favorite_location">MY FAVORITE LOCATION</string>
    <string name="title_my_points">MY POINTS BALANCE</string>
    <string name="title_my_balance">Church Points</string>
    <string name="title_payON">pay ON</string>
    <string name="title_messages">MESSAGES</string>
    <string name="title_gift_card">E-GIFT CARD</string>
    <string name="title_pay_earn">PAY AND EARN POINTS</string>
    <string name="title_pay_earn_">PAY/EARN</string>
    <string name="title_facebook">FACEBOOK</string>
    <string name="title_twitter">TWITTER</string>
    <string name="title_instagram">INSTAGRAM</string>
    <string name="title_terms_of_use">TERMS OF USE</string>
    <string name="title_privacy_policy">PRIVACY POLICY</string>
    <string name="title_contact_us">CONTACT US</string>
    <string name="title_store_feedback">STORE FEEDBACK</string>
    <string name="title_app_support">APP SUPPORT</string>
    <string name="title_how_did_we_do">HOW DID WE DO?</string>
    <string name="title_faq">FAQ</string>
    <string name="title_submit_receipts">SUBMIT RECEIPT</string>
    <string name="show_details">Show Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="no_rewards">You do not have any rewards yet!</string>
    <string name="txt_tax">*Tax will be added at checkout</string>
    <string name="item">Item</string>
    <string name="items">Item\'s</string>
    <string name="zero">0</string>
    <string name="zero_dolars">$0.00</string>
    <string name="one">1</string>
    <string name="zero_poins">-</string>
    <string name="pay_with_phone">Pay with phone?</string>
    <string name="balance">Balance:</string>
    <string name="points">Points</string>
    <string name="scan_at_register">Scan at the register to earn rewards</string>
    <string name="scan_at_register_pay">Scan at the register to pay\nand earn rewards</string>
    <string name="earn_pay_desc">Each code is good for 1 transaction only.\nPlease tap Refresh button above for a new
        code.
    </string>
    <string name="pay_tutorial_txt_1">Pay and Earn points at the same time!</string>
    <string name="pay_tutorial_txt_2">Step 1: Add a preferred\npayment method</string>
    <string name="pay_tutorial_txt_3">Step 2: Scan or enter your receipt code to pay and earn!</string>
    <string name="pay_tutorial_txt_4">Easy right? Get started below</string>
    <string name="view_all">VIEW ALL</string>
    <string name="messages">Messages</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="update_password">Update Password</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="activity_history">Order History</string>
    <string name="preferences">Preferences</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="promo_code">Promo Code</string>
    <string name="submit_receipt">Submit Receipt</string>
    <string name="transfer_loaylty">Transfer Loyalty Card</string>
    <string name="tutorial_">Tutorial</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="choose_existing">Choose existing</string>
    <string name="take_new_photo">Take new image</string>
    <string name="save">Save</string>
    <string name="change"><u>CHANGE</u></string>
    <string name="camera_permissions_message">Camera permissions are required for this app</string>
    <string name="text_ok">OK</string>
    <string name="dont_allow_text">DON\'T ALLOW</string>
    <string name="camera_permissions_denied">Please go to the phone settings and allow the permissions for camera in
        order to continue
    </string>
    <string name="storage_permissions_denied">Please go to the phone settings and allow the permissions for storage in
        order to continue
    </string>
    <string name="no_locations_found_text">Sorry, we could not find a store near that location. Please try again.
    </string>
    <string name="text_continue">Continue</string>
    <string name="ApiCall_validate_token">/user/validate_token</string>
    <string name="ApiCall_cloudconnect_settings">cloudconnect/setting</string>
    <string name="tutorial_image">tutorial image</string>
    <string name="navigation_menu">navigation menu</string>
    <string name="welccome_logo">welcome logo</string>
    <string name="arrow">arrow</string>
    <string name="home">home</string>
    <string name="rewards">rewards</string>
    <string name="order">order</string>
    <string name="account">account</string>
    <string name="image_car">image car</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_iten">menu item image</string>
    <string name="submenu_iten">item image</string>
    <string name="contentdescription">contentDescription</string>
    <string name="contentpinlocation">location icon</string>
    <string name="contentLogo">Church Chicken logo</string>
    <string name="reward_description">reward image</string>
    <string name="bag">Order Bag</string>
    <string name="map_button">map</string>
    <string name="list_button">listview</string>
    <string name="slader_image">slider image</string>
    <string name="clear_text">clear text</string>
    <string name="back_button">back</string>
    <string name="close_button">close</string>
    <string name="clear">clear</string>
    <string name="select_fav_locations">Tap to select your favorite location</string>
    <string name="no_locations_text_1">Use the search bar above or</string>
    <string name="no_locations_text_2"><u>turn on location services</u></string>
    <string name="no_locations_text_3">to find locations near you.</string>
    <string name="no_points_text">Keep earning Church’s Points for every mobile order and providing your phone number for in-store orders.</string>
    <string name="are_you_enjoy">Are you enjoing our app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_me_later">Ask me later</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
    <string name="title_rewards_wallet">REWARD WALLET</string>
    <string name="txt_select_rewards">Select reward to redeem</string>
    <string name="txt_no_rewards">No rewards yet!</string>
</resources>