<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg_black_outline"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_50"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/contentdescription"
            android:src="@mipmap/logo_thank_you" />


        <TextView
            style="@style/TextView18Brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/dimen_10"
            android:text="@string/are_you_enjoy" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_height="wrap_content"
            android:background="@color/squash">

            <TextView
                android:id="@+id/btn_yes"
                style="@style/TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/dimen_5"
                android:text="@string/yes" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_height="wrap_content"
            android:background="@color/squash">

            <TextView
                android:id="@+id/btn_no"
                style="@style/TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/dimen_5"
                android:text="@string/no" />

        </RelativeLayout>


        <TextView
            android:id="@+id/btn_ask_me_again"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/dimen_10"
            android:text="@string/ask_me_later" />

    </LinearLayout>


    <TextView
        android:id="@+id/btn_dont_ask_again"
        style="@style/TextViewBlack12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dimen_10"
        android:text="@string/dont_ask_me_again" />
</LinearLayout>