<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <RelativeLayout
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black">

        <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_5"
                android:contentDescription="@string/close_button"
                android:padding="@dimen/dimen_5"
                android:src="@drawable/close_icon" />

        <TextView
                style="@style/TitleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_promo_code" />
    </RelativeLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/actionbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_layoyut"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="vertical">

            <TextView
                style="@style/TextView26omnes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:text="@string/txt_promo_code_1" />

            <TextView
                style="@style/TextViewMEDIUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/txt_promo_code_2" />

            <TextView
                style="@style/TextViewPrmoInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/txt_promo_code_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/white"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black50opacity" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.tts.gueststar.utility.CustomEditTextPromoCOode
                        android:id="@+id/etPromoCode"
                        style="@style/EditText"
                        android:textColor="#6C6967"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dimen_5"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:layout_marginEnd="@dimen/dimen_5"
                        android:layout_marginBottom="@dimen/dimen_5"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_promo_code"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingStart="@dimen/dimen_5"
                        android:paddingTop="@dimen/dimen_5"
                        android:paddingEnd="@dimen/dimen_15"
                        android:paddingBottom="@dimen/dimen_5" />

                    <ImageButton
                        android:id="@+id/btn_clear_promo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_10"
                        android:background="@drawable/clear_icon"
                        android:contentDescription="@string/clear_text"
                        android:visibility="gone" />
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black50opacity" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
                android:id="@+id/bottom_layoyut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_submit_promo"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"

                >

            <TextView
                    style="@style/TextViewPrmoInfoNotWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_promo_code_4" />

            <TextView
                    android:id="@+id/txt_contact_us"
                    style="@style/TextViewCnstactUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:text="@string/txt_contact_us" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_promo"
            style="@style/BottomButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/submit" />


    </RelativeLayout>


</RelativeLayout>