<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/black">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_5"
            android:contentDescription="@string/back_button"
            android:padding="@dimen/dimen_5"
            android:src="@drawable/arrow_white_left" />

        <TextView
            style="@style/TitleWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rewards_wallet"
            tools:ignore="RelativeOverlap" />

        <RelativeLayout
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_5"
            android:visibility="gone"
            tools:ignore="RelativeOverlap">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/contentdescription"
                android:padding="@dimen/dimen_5"
                android:src="@drawable/icon_menu" />

        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_save_for_later"
        android:layout_below="@+id/actionbar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_no_rewards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_no_rewards"
                style="@style/TextViewLocationsDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/txt_no_rewards"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_no_rewards2"
                style="@style/TextView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_15"
                android:paddingEnd="@dimen/dimen_15"
                android:text="@string/no_points_text" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_rewards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_select_rewards"
                style="@style/TextView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/txt_select_rewards" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRerwardsWallet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_5" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_for_later"
        style="@style/BottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save_for_later" />
</RelativeLayout>