<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:contentDescription="@string/tutorial_image"
        android:src="@mipmap/tutorial_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_how_to_earn"
        style="@style/TutorialTextView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center"
        android:text="@string/how_to_eard_rewards"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txt_how_to_earn_desc"
        style="@style/TutorialTextView_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/how_to_eard_rewards_txt"
        app:layout_constraintEnd_toEndOf="@+id/txt_how_to_earn"
        app:layout_constraintStart_toStartOf="@+id/txt_how_to_earn"
        app:layout_constraintTop_toBottomOf="@+id/txt_how_to_earn" />

</androidx.constraintlayout.widget.ConstraintLayout>